--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
     "@serwist/sw": "^9.5.0",
+    "@solana-program/system": "^0.10.0",
     "@solana/connector": "^0.2.3",
+    "@solana/kit": "^5.4.0",
+    "@solana/react": "^5.4.0",
     "@walletconnect/universal-provider": "^2.23.4",
     "next": "16.1.4",
     "react": "19.2.3",
