--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@algobright/solana-connector": "^0.1.5",
+    "@base-ui/react": "^1.1.0",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
     "@serwist/sw": "^9.5.0",
