--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@algobright/solana-connector": "^0.1.5",
+    "@algobright/solana-connector": "file:.yalc/@algobright/solana-connector",
     "@base-ui/react": "^1.1.0",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
     "@serwist/sw": "^9.5.0",
     "@solana-program/system": "^0.10.0",
+    "@solana-program/token": "^0.10.0",
     "@solana/connector": "^0.2.3",
     "@solana/kit": "^5.4.0",
     "@solana/react": "^5.4.0",
+    "@solana/web3.js": "^1.98.4",
     "@walletconnect/universal-provider": "^2.23.4",
     "next": "16.1.4",
     "react": "19.2.3",
