--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@algobright/solana-connector": "file:.yalc/@algobright/solana-connector",
+    "@algobright/solana-connector": "^0.1.6",
     "@base-ui/react": "^1.1.0",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
